--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.css
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.css
@@ -1,34 +1,72 @@
+.clearfix{
+    clear: both;
+}
 .container{
-    width: 70%;
+    width: 1200px;
     margin: auto;
-    padding: 30px 0 50px 0;
+    padding: 20px 0 30px 0;
 }
-h2, h3{
-    color: rgba(200,200,200, 0.8);
+/*字体大小*/
+.container .mainFontSize{
+    font-size: 16px;
 }
-table{
-    width: 100%;
-    min-width: 720px;
-    border: solid thin lightblue;
-    /*color: rgba(140,140,140, 0.8);*/
-    color: rgba(200,200,200, 0.8);
+/*字体颜色*/
+.container .purpleFontColor{
+    color: #a2a4e3;
 }
-table tr{
-    width: 100%;
+.container .mainFontColor{
+    color: #c3c3c3;
 }
-table tr td{
-    empty-cells: show;
-    border: solid thin lightblue;
+/*图标和名称*/
+.container .iconAndName_container{
+    text-align: center;
+    margin: 20px 0 0 0;
 }
-.td_name{
-    font-weight: bold;
-    color: rgba(240,240,240, 0.8);
-    width: 15%;
-    min-width: 150px;
-    /*background-color: #00ccff;*/
+.container .compName{
+    font-size: 20px;
+    margin: 10px 0 10px 0;
 }
-.td_value{
+/*详细信息*/
+.container .detail_container{
+    width: 600px;
+    height: 550px;
+    overflow: auto;
+    float: left;
+}
+.container .detail_container::-webkit-scrollbar{
+
+}
+.container .detail_container .item_name{
+    width: 180px;
+    padding: 7px 20px 7px 0;
+    display: inline-block;
+}
+.container .detail_container .item_value {
+    display: inline-block;
+}
+
+/*chart*/
+.container .chart_container{
+    float: right;
+    position: relative;
+}
+.container .chart_container .aboutChart{
+    position: absolute;
+    top: -32px;
+    right: 20px;
+    height: 32px;
+    width: 32px;
+    background: url(pic_companyDetails/问号.png);
+}
+.container .chart_container .briefOfChart{
+    position: absolute;
+    top: -16px;
+    right: 36px;
+    font-size: 12px;
     width: 300px;
-    min-width: 200px;
-    /*background-color: #5bc0de;*/
+
+    padding: 10px 10px 10px 10px;
+    border: 1px solid #535353;
+    border-radius: 6px;
+    background-color: rgba(43,43,43,0.9);
 }
