社区界面和其他

--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -1,6 +1,6 @@
 
 <div class="graphListBlock">
-    <div ui-sref="microIndustryChain.previewChainView" class="graphCell" ng-repeat="graph in allGraphList">
+    <div ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class="graphCell" ng-repeat="graph in allGraphList">
 
     </div>
 </div>
