--- a/app/view/microIndustryChain/microIndustryChain.html
+++ b/app/view/microIndustryChain/microIndustryChain.html
@@ -16,7 +16,7 @@
 
         <div>
             <ul class="david-navbar-right">
-                <li ui-sref="personal" ng-show="haslogined"><a>个人中心</a></li>
+                <li ui-sref="personalMain" ng-show="haslogined"><a>个人中心</a></li>
             </ul>
         </div>
     </div>
