--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -91,14 +91,14 @@
     <div class="head">
         <div class= "head-left">
             <div class="head-location">
-                <p>目录1>目录2>目录3</p>
+                <p></p>
             </div>
             <div class="head-title">
-                <h1>文章标题</h1></div>
+                <h1>创新ICT技术赋能新能源汽车产业链升级</h1></div>
             <div class="head-detail">
-                <p>浏览</p>
-                <p>评论</p>
-                <p>赞同</p>
+                <p>浏览 1</p>
+                <p>评论 0</p>
+                <p>赞同 10</p>
                 <div class="clear"></div>
             </div>
         </div>
@@ -142,6 +142,20 @@
                     一方面，服务效率与体验急待提升；另一方面，资金监管政策收紧，风控能力要求增强，汽车产业的变革让我国的汽车金融市场在蕴含巨大发展空间的同时面临着挑战！
                     去年，中国汽车流通行业协会通过大力推动和创新汽车产业金融业务，深度挖掘市场潜力，实现了汽车市场的稳步回升，推动了脱虚向实的政策引导。
                     中企通信詹东东在演讲中表示，随着新能源汽车市场的发展与变革，新势力造车和合资车企纷纷拔地而起，金融监控政策和汽车金融市场环境的变化将让金融产业业发生翻天覆地的变化！当前，高新技术产业的发展正推动汽车金融市场的渗透率持续上升，市场参与主体也呈现爆发性的增长。汽车金融已经发展成一个高度细分和逐渐规范化的行业，并仍然处于快速变革和增长期，詹东东认为，汽车金融产品的不断推陈出新，需要创新的ICT技术方案来支持。
+
+
+                    新常态下，新能源汽车市场投资风控策略尤其重要！
+                    当前，轰轰烈烈发展的新能源汽车产业，带动了以汽车融资渠道为核心，囊括了整车厂、汽车新零售平台、共享汽车，金融平台、银行业、保险业、渠道商，以及供应链金融、金融科技等众多领域的发展。
+                    在新的形势下，汽车融资服务、汽车金融产品解析、风控管理落地应用等关键问题显得极为重要。
+                    詹东东在接受OFweek新能源汽车网的采访中表示，年轻消费群体的崛起，以及新势力造车企业的遍地开花，消费者对汽车金融产品的差异化需求将越发明显。这就对产业链上下游企业数字化和自动化的模式提出了更高要求！
+                    例如，原来的汽车金融以保险为主，如今滋生出汽车租赁，这就要求企业内部要有数字化的基因和团队，通过人工智能、大数据的方式，如图像识别、机器定损等，更快捷地帮助企业和个人用户解决问题。
+                    詹东东介绍到，当前市场有一个特点，无论是外资企业还是自主车企，市场的参与者都在用数字化、科技化的方式去做改变，第一就是触达用户，更多地感知用户的个性化需求，只有提供个性化的服务才会有竞争优势；第二就是降低人工成本，轻资产上阵。利用更加自动化、数字化、流程化的方式去感知用户，用精准的模式在汽车后市场理赔和反欺诈等；再而就是与用户之间的感知能力，例如，企业自身各个系统之间的对接能力、与产业链上下游的对接，零配件厂商与整车厂、或者与银行、证券、监管机构之间的数据对接和管理，这些都需要网络化、多样化的连接和管理，再而进行计算和处理，然后再去开拓更多的产品，从而降低制造成本和减少中间复杂环节。
+
+                    创新ICT技术助力新能源汽车产业链升级
+                    目前我国的新能源汽车、包括汽车金融产品已经进入数十个国家，动力电池、驱动电机等关键零部件进入跨国车企配套体系，世界主要新能源汽车产品也纷纷进入中国市场，贸易的往来，技术的整合交流，ICT技术在其中担当着重要的连接管理作用！
+                    詹东东对OFweek新能源汽车网表示， 汽车制造 是在工业中较为复杂的一个产业，中间各个环节需要强大的数据与系统连接管理能力，计算和处理。随着造车浪潮的兴起，新能源汽车产业正呈现前所未有的裂变，此时制约行业发展的不仅仅是客户，还有顺应需求的产品服务、技术的应用、风控能力的提升、低成本的资金来源等，构建业内协作的生态体系，亟待ICT技术来助力企业平台技术升级和资源整合。
+                    詹东东介绍，当前的创新ICT技术，在整个汽车产业的上中下游都发挥着重要作用！对于新能源汽车的整车制造商来说，信息化的平台将大大驱动业务的发展，包括汽车零部件 标准化、信息化处理、物流、信息流、业务流、资金流的全面整合同步，以数字化工厂、智能工厂、全球化布局等能力推动汽车定制化生产，精益生产和柔性化生产，实现人车环境互联发展。
+                    以中企通信ICT技术为例，通过MPLS专用网络、云计算、信息安全与数据中心托管等解决方案，将汽车整车制造厂如小康股份、中车以及一些新势力造车企业的业务提供制造过程与企业运营的横向、产业间与上下游供应生态的纵向，以及用户至研发的端到端数据连接平台、计算平台与信息安全保障平台，通过平台、技术、运营、服务等 方式实现高效战略布局，减少中间的的弯路和复杂环节。
                 </p>
                 <div class="support">
                     <!--<div class="praise ">-->
@@ -206,8 +220,8 @@
                                 <p class="username" >{{comment_detail.author}}</p>
                                 <!--<p class="like" ng-click="like_comment(comment_detail)" >  &#xe602;</p>-->
                                 <!--<p class="step" ng-click="step_comment(comment_detail)">  👎100 </p>-->
-                                <i class="like iconfont icon-good" ng-click="like_comment(comment_detail)" >{{comment_detail.up}}</i>
-                                <i class="step iconfont icon-cai" ng-click="step_comment(comment_detail)">{{comment_detail.down}}  </i>
+                                <!--<i class="like iconfont icon-good" ng-click="like_comment(comment_detail)" >{{comment_detail.up}}</i>-->
+                                <!--<i class="step iconfont icon-cai" ng-click="step_comment(comment_detail)">{{comment_detail.down}}  </i>-->
                                 <p class="delete iconfont icon-guanbi"  ng-if = "comment_detail.author ==user_id" ng-click="delete_comment(comment_detail)"> </p>
                                 <p class="comment-body">{{comment_detail.comment}}</p>
                                 <p class="comment-footer">
