--- a/app/view/microIndustryChain/previewChainView/previewChainView.css
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.css
@@ -294,14 +294,14 @@ a {
 .tools-box .submit-btn input{ width: 100%; height: 100%; font-family: "微软雅黑"; font-size: 14px; color: #fff; cursor: pointer; border: none; outline: none; background-color: rgb(152,145,199);}
 
 /* 回复信息 */
-#info-show{float: left;  width: 100%; margin-top: 20px;max-height: 500px;overflow-y: auto;}
+#info-show{float: left;  width: 100%; margin-top: 20px;max-height: 600px;overflow-y: auto;}
 #info-show li{ width: 97%; height: auto; padding: 10px 0 10px 0; border-bottom: 1px dashed #c0c0c0; float: left;padding-top: 3%;padding-left: 3%;}
 #info-show .head-face{width: 10%;  float: left; text-align: center;}
 #info-show .head-face img{width: 50px; height: 50px; border-radius: 50%; box-shadow: 0 0 8px #c0c0c0;}
 
 #info-show .reply-cont{ width: 85%; padding-right: 1%; padding-left:3%;float: right;}
 #info-show .reply-cont  p{ min-height: 20px; line-height: 20px;  font-family: "微软雅黑"; font-size: 14px;}
-#info-show .reply-cont .username{ color: rgb(152,145,199); margin-bottom: 5px;float: left;margin-right: 40px}
+#info-show .reply-cont .username{ color: rgb(152,145,199); margin-bottom: 5px;float: left;margin-right: 90%}
 #info-show .reply-cont .comment-body{ color: #999; max-height: auto; word-wrap:break-word;
     word-break:break-all;}
 #info-show .reply-cont .comment-footer{font-size: 12px; color: #c0c0c0; margin-top: 10px;}
