--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -1,9 +1,25 @@
 
 <div class="graphListBlock">
-    <div ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class="graphCell" ng-repeat="graph in allGraphList">
 
+
+    <div class="graphContainer">
+        <div ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class="graphCell" ng-repeat="graph in allGraphList">
+            <div>
+                <img  src="view/microIndustryChain/mineChainView/cover.png"  class="graph-cover">
+            </div>
+            <div class="graph-title">
+                关于XX政策的汽车产业链模型详细分析2
+            </div>
+            <div class="graph-time">
+                发布于{{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
+            </div>
+        </div>
     </div>
+
 </div>
+<!--<div ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class="graphCell" ng-repeat="graph in allGraphList">-->
+
+<!--</div>-->
 
 
 
