--- a/app/view/microIndustryChain/mineChainView/mineChainView.html
+++ b/app/view/microIndustryChain/mineChainView/mineChainView.html
@@ -1,11 +1,31 @@
 
 <div class="graphListBlock">
-    <div class="graphCell" ui-sref="microIndustryChain.createChainView({'graphid':graph.graphid})" ng-repeat="graph in ownGraphList">
 
-    </div>
-    <div class="graphCell" id="addGraphBtn" ng-click="addNewGraph()">
+   <div class="top-tool">
+       <button class="add-graph" id="addGraphBtn" ng-click="addNewGraph()">
+           新建模型 +
+       </button>
 
-    </div>
+       <!--<select class="graph-select">-->
+
+       <!--</select>-->
+   </div>
+
+
+   <div class="graphContainer">
+       <div class="graphCell" ui-sref="microIndustryChain.createChainView({'graphid':graph.graphid})" ng-repeat="graph in ownGraphList">
+            <div>
+                <img  src="view/microIndustryChain/mineChainView/cover.png"  class="graph-cover">
+            </div>
+           <div class="graph-title">
+                关于XX政策的汽车产业链模型详细分析2
+           </div>
+           <div class="graph-time">
+               发布于{{graph.graphid.substring(2,6)}}-{{graph.graphid.substring(6,8)}}-{{graph.graphid.substring(8,10)}} {{graph.graphid.substring(10,12)}}:{{graph.graphid.substring(12,14)}}
+           </div>
+       </div>
+   </div>
+
 </div>
 
 
